--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,7 @@ release:
   only:
     - tags
   script:
-    - pip install build twine wheel
+    - pip install build twine wheel setuptools
     - python setup.py sdist bdist_wheel
     - export TWINE_USERNAME=gitlab-ci-token
     - export TWINE_PASSWORD=${CI_JOB_TOKEN}
